print_referral: Fixes
- make sure blank referral form is printed (SQL query failure if
date is null

- added proper units for bp, weight and height
- remove insurance data
- add space for clinical summary

--- a/sites/default/referral_template.html
+++ b/sites/default/referral_template.html
@@ -130,7 +130,7 @@
   </tr>
  </table>
 
- <br />&nbsp;<br />{label_history_summary}:
+ <br />&nbsp;<br />{label_history_summary}:<br> <br>
 
  <table cellspacing='0' cellpadding='0' class='linetable'>
   <tr>
@@ -153,7 +153,7 @@
    <td class='under'>{pt_sex}&nbsp;</td>
   </tr>
  </table>
-
+<!--
  <table class='linetable'>
   <tr>
    <td style="width:1%;white-space:nowrap">{label_ins_name} &nbsp;</td>
@@ -168,7 +168,7 @@
    <td class='under'>{insurance_date}</td>
   </tr>
  </table>
-
+-->
  <table class='linetable'>
   <tr>
    <td style="width:1%;white-space:nowrap">{label_address} &nbsp;</td>
@@ -261,6 +261,7 @@
   </tr>
  </table>
 
+<!--
  <table class='linetable'>
   <tr>
    <td style="width:1%;white-space:nowrap">{label_ins_name} &nbsp;</td>
@@ -275,7 +276,7 @@
    <td class='under'>{insurance_date}</td>
   </tr>
  </table>
-
+-->
 
  <table class='linetable'>
   <tr>
@@ -302,7 +303,7 @@
   </tr>
  </table>
 
- <br />&nbsp;<br />{label_history_summary}:
+ <br />&nbsp;<br />{label_history_summary}:<br><br>
 
  <table class='linetable'>
   <tr>
@@ -380,6 +381,7 @@
   </tr>
  </table>
 
+<!--
  <table class='linetable'>
   <tr>
    <td style="width:1%;white-space:nowrap">{label_ins_name} &nbsp;</td>
@@ -394,7 +396,7 @@
    <td class='under'>{insurance_date}</td>
   </tr>
  </table>
-
+-->
 
  <table class='linetable'>
   <tr>
